# reflex-scotty-poll

./: .gitignore  Procfile  README.md  TODO.md  all-build  data  default.nix  front-build  front-release  front-repl  heroku-build-deploy  heroku-push  index.html.tpl  nix-enter  nix-front-build  nix-front-release  nix-front-repl  stack.yaml  stack.yaml.heroku.patch  variables
reflex-scotty-poll-backend/: Auth.hs  ChangeLog.md  Handlers.hs  Main.hs  Model.hs  View.hs  data  index.html.tpl  reflex-scotty-poll-backend.cabal
reflex-scotty-poll-frontend/: ChangeLog.md  FFI.hs  LICENSE  Main.hs  Parser.hs  Questions.hs  Types.hs  reflex-scotty-poll-frontend.cabal
reflex-scotty-poll-frontend/Reflex/Dom/Contrib/: Xhr.hs
static/: index.html  poll.css
