name:                reflex-scotty-poll-frontend
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

flag ghcjs
    description: Tell cabal we are using ghcjs (work around until hackage supports impl(ghcjs))
    default: True

executable reflex-scotty-poll-frontend
  main-is:             Main.hs
  other-modules:       FFI,
                       Parser,
                       Questions,
                       Types,
                       Reflex.Dom.Contrib.Xhr
  build-depends:       base >=4.9 && <4.10,
                       aeson,
                       bytestring,
                       containers,
                       data-default,
                       ghcjs-dom,
                       http-types,
                       lens,
                       mtl,
                       reflex,
                       reflex-dom,
                       string-conv,
                       text,
                       unicode-show
  -- Make sure ghcjs gets turned off if ghcjs-base is not avaialbe
  if flag(ghcjs)
      build-depends: ghcjs-base
  default-language:    Haskell2010
